--- a/style.css
+++ b/style.css
@@ -7,54 +7,69 @@ html body {
   background-color: cornsilk;
 }
 
-nav ul li {
-  list-style: none;
-  float: right;
-  margin-bottom: 30px;
-}
-
-nav ul li:first-child {
-  float: left;
-}
-
-nav {
-  background-color: transparent;
-  line-height: 40px;
-  text-align: right;
-  padding-bottom: 50px;
-}
-
-nav a {
-  text-decoration: none;
-  font-size: 20px;
+.navbar {
   overflow: hidden;
-  padding: 12px;
-  color: black;
-  font-weight: bold;
+  background-color: #333;
 }
 
-nav a:hover {
-  background-color: rgb(114, 56, 56);
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-}
-
-nav a:active {
-  color: white;
-  border-radius: 5px;
-}
-
-.left {
+.dropdown-content a {
+  float: none;
+  color: #333;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
   text-align: left;
-  margin-right: 0;
 }
 
-.section-1 {
-  margin: auto;
-  width: 50%;
-  height: 50%;
-  padding: 10px;
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: right;
+  padding-right: 40px;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  color: black;
+  min-width: 160px;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  flex-wrap: wrap;
+  flex: 1 0 10%;
 }
 
 .label {
@@ -100,17 +115,20 @@ nav a:active {
 }
 
 .red-texts {
-  width: 50px;
-  height: 25px;
-  font-size: 25px;
+  width: 15%;
+  height: 100%;
+  font-size: 18px;
   text-align: center;
-  color: red;
   border: 3px;
-  border-color: red;
+  margin: 10px;
+  border-color: none;
   border-radius: 4px;
   border-style: solid;
-  margin: 10px;
-  margin-right: 30px;
+  color: red;
+
+  @media screen and (max-width: 700) {
+    width: 15px;
+  }
 }
 
 .green-slider {
@@ -126,7 +144,22 @@ nav a:active {
 }
 
 .green-texts {
-  width: 50px;
+  width: 15%;
+  height: 100%;
+  font-size: 18px;
+  text-align: center;
+  color: green;
+  border: 3px;
+  margin: 10px;
+  border-color: none;
+  border-radius: 4px;
+  border-style: solid;
+
+  @media screen and (max-width: 700) {
+    width: 15px;
+  }
+
+  /* width: 50px;
   height: 25px;
   font-size: 25px;
   text-align: center;
@@ -136,7 +169,7 @@ nav a:active {
   border-radius: 4px;
   border-style: solid;
   margin: 10px;
-  margin-right: 30px;
+  margin-right: 30px; */
 }
 
 .blue-slider {
@@ -152,29 +185,33 @@ nav a:active {
 }
 
 .blue-texts {
-  width: 50px;
-  height: 25px;
-  font-size: 25px;
+  width: 15%;
+  height: 100%;
+  font-size: 18px;
   text-align: center;
   color: blue;
   border: 3px;
+  margin: 10px;
   border-color: none;
   border-radius: 4px;
   border-style: solid;
-  margin: 10px;
-  margin-right: 30px;
+
+  @media screen and (max-width: 700) {
+    width: 15px;
+  }
 }
 
 .result {
   height: 100px;
-  width: 480px;
+  width: 50%;
   border: blue;
   background-color: black;
-  margin: 10px;
+  margin: 2px;
 }
 
 .fieldset {
-  width: 500px;
+  margin: auto;
+  width: 50%;
   background-color: #f0eedc;
   border-radius: 8px;
   padding: 20px;
@@ -184,8 +221,8 @@ nav a:active {
   height: 50px;
   min-height: 10px;
   border-radius: 4px;
-  width: 400px;
-  font-size: 25px;
+  width: 50%;
+  font-size: 15px;
   border-color: lightgreen;
   color: black;
   font-weight: bold;
@@ -214,8 +251,17 @@ nav a:active {
   font-weight: 400;
 }
 
-footer {
+.above-footer {
+  min-height: calc(100vh - 650px);
+}
+
+.above-footers {
+  min-height: calc(100vh - 502px);
+}
+
+.footer {
   text-align: center;
-  background-color: black;
+  background-color: #333;
   color: white;
+  line-height: 50px;
 }
