--- a/style2.css
+++ b/style2.css
@@ -7,54 +7,70 @@ html body {
   background-color: cornsilk;
 }
 
-nav ul li {
-  list-style: none;
-  float: right;
-  margin-bottom: 30px;
-}
-
-nav ul li:first-child {
-  float: left;
-}
-
-nav {
-  background-color: transparent;
-  line-height: 40px;
-  text-align: right;
-  padding-bottom: 50px;
-}
-
-nav a {
-  text-decoration: none;
-  font-size: 20px;
+.navbar {
   overflow: hidden;
-  padding: 12px;
-  color: black;
-  font-weight: bold;
+  background-color: #333;
 }
 
-nav a:hover {
-  background-color: rgb(114, 56, 56);
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-}
-
-nav a:active {
-  color: white;
-  border-radius: 5px;
-}
-
-.left {
+.dropdown-content a {
+  float: none;
+  color: #333;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
   text-align: left;
-  margin-right: 0;
 }
 
-.section-1 {
-  margin: auto;
-  width: 50%;
-  height: 50%;
-  padding: 10px;
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: right;
+  padding-right: 40px;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  color: black;
+  min-width: 160px;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  flex-wrap: wrap;
+  flex: 1 0 10%;
 }
 
 .label {
@@ -88,19 +104,19 @@ nav a:active {
 }
 
 .fieldset {
-  width: 500px;
+  margin: auto;
+  width: 60%;
   background-color: #f0eedc;
   border-radius: 8px;
-  padding: 20px;
-  margin: 10px;
+  padding-right: 20px;
 }
 
 .hexvalue {
   height: 50px;
   min-height: 10px;
   border-radius: 4px;
-  width: 400px;
-  font-size: 25px;
+  width: 100%;
+  font-size: 20px;
   border-color: lightgreen;
   color: black;
   font-weight: bold;
@@ -108,35 +124,34 @@ nav a:active {
 }
 
 .blue {
-  width: 50px;
-  height: 45px;
-  font-size: 25px;
+  width: 10%;
+  height: 100%;
+  font-size: 18px;
   text-align: center;
   color: blue;
   border: 3px;
   border-color: none;
   border-radius: 4px;
   border-style: solid;
-  margin-right: 30px;
 }
 
 .red {
-  width: 50px;
-  height: 45px;
-  font-size: 25px;
+  min-width: 10%;
+  width: 10%;
+  height: 100%;
+  font-size: 18px;
   text-align: center;
   color: red;
   border: 3px;
   border-color: none;
   border-radius: 4px;
   border-style: solid;
-  margin-right: 30px;
 }
 
 .green {
-  width: 50px;
-  height: 45px;
-  font-size: 25px;
+  width: 10%;
+  height: 100%;
+  font-size: 18px;
   text-align: center;
   color: green;
   border: 3px;
@@ -144,15 +159,14 @@ nav a:active {
   border-color: none;
   border-radius: 4px;
   border-style: solid;
-  margin-right: 30px;
 }
 
 .rgbvalue {
   height: 50px;
   min-height: 10px;
   border-radius: 4px;
-  width: 400px;
-  font-size: 25px;
+  width: 100%;
+  font-size: 15px;
   border-color: lightgreen;
   color: black;
   font-weight: bold;
@@ -161,10 +175,10 @@ nav a:active {
 
 .result {
   height: 100px;
-  width: 480px;
+  width: 100%;
   border: blue;
   background-color: black;
-  margin: 2px;
+  margin: 5px;
 }
 
 .examples {
@@ -189,8 +203,17 @@ nav a:active {
   font-weight: 400;
 }
 
-footer {
+.above-footer {
+  min-height: calc(100vh - 650px);
+}
+
+.above-footers {
+  min-height: calc(100vh - 502px);
+}
+
+.footer {
   text-align: center;
-  background-color: black;
+  background-color: #333;
   color: white;
+  line-height: 50px;
 }
